Avoid hiding info box closer behind scrollbar

--- a/style.css
+++ b/style.css
@@ -6,12 +6,17 @@
   position: fixed;
   background-color: white;
   width: 50%;
-  max-height: 80%;
-  overflow: scroll;
+  height: 50%;
   top: 10px;
   right: 10px;
   border: 1px solid black;
   visibility: hidden;
+  padding-bottom: 30px;
+}
+
+#course-extra-info {
+  overflow: scroll;
+  height: 100%;
 }
 
 .semester-tag {
@@ -40,6 +45,6 @@
 }
 
 #info-box-closer {
-  float: right;
+  text-align: right;
   font-size: x-small;
 }
